# jaxellip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-a-release.yaml  test.yaml
benchmarks/: compare_scipy.py  compare_to_scipy.py
jaxellip/: __init__.py  elliptic_functions_and_integrals.py
src/jaxellip/: __init__.py  elliptic_functions_and_integrals.py
tests/: test_jaxellip.py  test_speed.py
