[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[project]
name = "jaxellip"
version = "0.1.0"
description = "Some elliptic integrals in JAX"
authors = [{ name = "Sina Atalay", email = "dev@atalay.biz" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "jax>=0.10.2,<0.12",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Source = "https://github.com/sinaatalay/jaxellip"

[dependency-groups]
dev = [
    "mpmath>=1.3",
    "prek>=0.4.5",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "scipy>=1.18.0",
    "ty>=0.0.55",
    "typos>=1.48.0",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "NPY", # NumPy-specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "ISC001",  # Conflicts with the formatter.
    "PLR2004", # Scientific tests intentionally compare against named constants.
]
flake8-unused-arguments.ignore-variadic-names = true

[tool.ty.environment]
python-version = "3.12"
python-platform = "all"
root = ["./src"]

[tool.typos.default.extend-words]
Atalay = "Atalay"
JAX = "JAX"
ellipe = "ellipe"
ellipk = "ellipk"
ellipkm1 = "ellipkm1"
jaxellip = "jaxellip"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "speed: wall-clock speed checks vs SciPy",
]
